--- a/configs/power-seeking-13.yaml
+++ b/configs/power-seeking-13.yaml
@@ -5,7 +5,7 @@ layer: [13]
 
 # Training Hyperparameters
 learning_rate: 1.0e-3
-num_train_epochs: 20
+num_train_epochs: 10
 beta: 0.1
 per_device_train_batch_size: 4
 gradient_accumulation_steps: 1
@@ -14,7 +14,7 @@ lr_scheduler_type: "cosine"
 warmup_steps: 10
 
 # Logging and Instrumentation
-report_to: "wandb"
+report_to: "none"
 logging_steps: 1
 max_length: 2048
 max_prompt_length: 2048
